enum TipoPlanta {
  pteridofita('pteridófita'),
  briofita('briófitas'),
  gimnosperma('gimnosperma'),
  angiosperma('angiosperma');

  final String tipo;

  const TipoPlanta(this.tipo);
}
