abstract class Iterador<T, K> {
  bool temProximo();
  T proximo();
  K atual();
}
