@startuml Diagrama_Classe_2
title Diagrama de Classe 2 - Utilitários

package utils {
  abstract class FabricaDePlanta {
    +fabricarPlanta(nome: String, dataAquisicao: DateTime, tipoPlanta: TipoPlanta, agendamentos: List<Agendamento>)
  }

  enum TipoPlanta {
    briofita
    pteridofita
    gimnosperma
    angiosperma
  }

  interface Iterador<T> {
    temProximo(): bool
    proximo(): T
    atual(): T
  }

  class MenuPlanta {
    -plantas: List<Planta>
    -posicao: int
  }

  class MenuAgendamentos {
    -plantas: List<Planta>
    -posicao: int
  }

  Iterador <|.. MenuPlanta
  Iterador <|.. MenuAgendamentos
}
@enduml
